tests/ui/proc-macro/ambiguous-builtin-attrs.stderr
error[E0425]: cannot find value `NonExistent` in this scope
  --> $DIR/ambiguous-builtin-attrs.rs:35:5
   |
LL |     NonExistent;
   |     ^^^^^^^^^^^ not found in this scope

error[E0659]: `repr` is ambiguous
  --> $DIR/ambiguous-builtin-attrs.rs:10:3
   |
LL | #[repr(C)]
   |   ^^^^ ambiguous name
   |
   = note: ambiguous because of a name conflict with a builtin attribute
   = note: `repr` could refer to a built-in attribute
note: `repr` could also refer to the attribute macro imported here
  --> $DIR/ambiguous-builtin-attrs.rs:7:5
   |
LL | use builtin_attrs::*;
   |     ^^^^^^^^^^^^^^^^
   = help: use `crate::repr` to refer to this attribute macro unambiguously

error[E0659]: `repr` is ambiguous
  --> $DIR/ambiguous-builtin-attrs.rs:12:18
   |
LL | #[cfg_attr(true, repr(C))]
   |                  ^^^^ ambiguous name
   |
   = note: ambiguous because of a name conflict with a builtin attribute
   = note: `repr` could refer to a built-in attribute
note: `repr` could also refer to the attribute macro imported here
  --> $DIR/ambiguous-builtin-attrs.rs:7:5
   |
LL | use builtin_attrs::*;
   |     ^^^^^^^^^^^^^^^^
   = help: use `crate::repr` to refer to this attribute macro unambiguously

error[E0659]: `repr` is ambiguous
  --> $DIR/ambiguous-builtin-attrs.rs:21:34
   |
LL | fn non_macro_expanded_location<#[repr(C)] T>() {
   |                                  ^^^^ ambiguous name
   |
   = note: ambiguous because of a name conflict with a builtin attribute
   = note: `repr` could refer to a built-in attribute
note: `repr` could also refer to the attribute macro imported here
  --> $DIR/ambiguous-builtin-attrs.rs:7:5
   |
LL | use builtin_attrs::*;
   |     ^^^^^^^^^^^^^^^^
   = help: use `crate::repr` to refer to this attribute macro unambiguously

error[E0659]: `repr` is ambiguous
  --> $DIR/ambiguous-builtin-attrs.rs:25:11
   |
LL |         #[repr(C)]
   |           ^^^^ ambiguous name
   |
   = note: ambiguous because of a name conflict with a builtin attribute
   = note: `repr` could refer to a built-in attribute
note: `repr` could also refer to the attribute macro imported here
  --> $DIR/ambiguous-builtin-attrs.rs:7:5
   |
LL | use builtin_attrs::*;
   |     ^^^^^^^^^^^^^^^^
   = help: use `crate::repr` to refer to this attribute macro unambiguously

error[E0659]: `allow` is ambiguous
  --> $DIR/ambiguous-builtin-attrs.rs:39:3
   |
LL | #[allow(unused)]
   |   ^^^^^ ambiguous name
   |
   = note: ambiguous because of a name conflict with a builtin attribute
   = note: `allow` could refer to a built-in attribute
note: `allow` could also refer to the built-in attribute imported here
  --> $DIR/ambiguous-builtin-attrs.rs:38:5
   |
LL | use deny as allow;
   |     ^^^^^^^^^^^^^
   = help: use `crate::allow` to refer to this built-in attribute unambiguously

error[E0659]: `feature` is ambiguous
  --> $DIR/ambiguous-builtin-attrs.rs:4:4
   |
LL | #![feature(decl_macro)]
   |    ^^^^^^^ ambiguous name
   |
   = note: ambiguous because of a name conflict with a builtin attribute
   = note: `feature` could refer to a built-in attribute
note: `feature` could also refer to the attribute macro imported here
  --> $DIR/ambiguous-builtin-attrs.rs:7:5
   |
LL | use builtin_attrs::*;
   |     ^^^^^^^^^^^^^^^^
   = help: use `crate::feature` to refer to this attribute macro unambiguously

error: `#[repr]` attribute cannot be used on match arms
  --> $DIR/ambiguous-builtin-attrs.rs:25:9
   |
LL |         #[repr(C)]
   |         ^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: `#[repr]` attribute cannot be used on type parameters
  --> $DIR/ambiguous-builtin-attrs.rs:21:32
   |
LL | fn non_macro_expanded_location<#[repr(C)] T>() {
   |                                ^^^^^^^^^^
   |
   = help: `#[repr]` can only be applied to data types

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0425, E0659.
For more information about an error, try `rustc --explain E0425`.
